Fixed menu overlay footer overlapping buttons. Added full T&Cs functionality and mobile support.

--- a/Website/styles.css
+++ b/Website/styles.css
@@ -120,6 +120,10 @@ h1{
   font-family: 'Lekton', sans-serif;
   cursor: pointer;
 }
+.Customize-Container #Order-Wrapper{
+  font-size: 20px;
+  color: #F6364D;
+}
 .Customize-Container span:hover{
   font-weight: bolder;
 }
@@ -220,6 +224,74 @@ h1{
 }
 /*=============*/
 
+/*T&Cs Overlay
+==============*/
+.Order-Wrapper{
+  background-color: #222222;
+  height: 0;
+  width: 100%;
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  -webkit-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;
+}
+
+.Order-Wrapper ::-webkit-scrollbar {
+  width: 8px;
+}
+.Order-Wrapper ::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+.Order-Wrapper ::-webkit-scrollbar-thumb {
+  background: #888;
+}
+.Order-Wrapper ::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+.Order-Header{
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+}
+.Order-Header h1{
+  color: white;
+}
+.Order-Header .closeBtn{
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+}
+
+.Terms-Content{
+  overflow: scroll;
+  overflow-x: hidden;
+  height: 88%;
+}
+.Terms-Content p{
+  line-height: 1.2;
+  white-space: pre-line;
+  color: white;
+}
+.btn{
+  position: relative;
+  color: white;
+  font-weight: bold;
+  font-size: 25px;
+  padding-right: 15px;
+  cursor: pointer;
+}
+.btn:hover{
+  color: #F6364D;
+  text-decoration: underline;
+}
+.Terms-Content .right{
+  float: right;
+}
+/*==============*/
 
 /*Menu-Overlay
 =============*/
@@ -230,7 +302,7 @@ h1{
   opacity: 0;
   display: none;
   position: fixed;
-  z-index: 2;
+  z-index: 1;
   left: 0;
   top: 0;
   overflow: hidden;
@@ -249,7 +321,7 @@ h1{
   text-decoration: none;
   color: white;
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   top: 20px;
   right: 45px;
   font-size: 15px;
@@ -270,6 +342,7 @@ h1{
   width: 100%;
   text-align: left;
   margin-top: 30px;
+  z-index: 2;
 }
 .overlay-content a::after{
   content: "";
